# cmastro

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cd.yml  ci.yml
cmastro/: cm.py  plot.py
cmastro/cmaps/: hesperia.csv  lacerta.csv  laguna.csv
docs/: conf.py  index.rst
src/cmastro/: __init__.py  cm.py
tests/: test_cmap.py
