[metadata]
name = cmastro
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Colormaps for Astronomers
long_description = file: README.md
license = MIT
license_file = LICENSE
url = https://github.com/adrn/cmastro
edit_on_github = False
github_project = adrn/cmastro
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
install_requires = matplotlib
python_requires = >=3.7
setup_requires = setuptools_scm

[options.package_data]
* = *.txt

[options.extras_require]
test =
    pytest
docs =
    pydata_sphinx_theme
    sphinx_automodapi
    numpydoc

[tool:pytest]
testpaths = "cmastro" "docs"
text_file_format = rst
addopts = --doctest-rst

[flake8]
max-line-length = 80
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
ignore =
    E402
    E226
    E741
    W504
    W503
exclude =
    conftest.py
    docs/conf.py
    setup.py
